Added User database table and endpoints
