# GatorFinder/Backend/controllers/event_controller.go
@@ -159,3 +159,145 @@ func DeleteEvent(w http.ResponseWriter, r *http.Request) {
 	json.NewEncoder(w).Encode(map[string]string{"message": "Event received successfully"})
 
 }
+
+
+
+
+// @Summary Add a new User
+// @Description Adds a new User to the system
+// @Tags Users
+// @Accept  json
+// @Produce  json
+// @Param event body models.User true "User Data"
+// @Success 200 {object} models.User
+// @Router /users/add [post]
+func AddUser(w http.ResponseWriter, r *http.Request) {
+	var user models.User
+
+	// Decode JSON request
+	err := json.NewDecoder(r.Body).Decode(&user)
+	if err != nil {
+		http.Error(w, "Invalid JSON payload", http.StatusBadRequest)
+		return
+	}
+
+	// Open database connection
+	db, err := sql.Open("sqlite3", "./test.db")
+	if err != nil {
+		http.Error(w, "Failed to connect to database", http.StatusInternalServerError)
+		return
+	}
+	defer db.Close()
+
+	// Prepare SQL statement
+	stmt, err := db.Prepare("INSERT INTO Users(username, email, password) VALUES (?, ?, ?)")
+	if err != nil {
+		http.Error(w, "Failed to prepare SQL statement", http.StatusInternalServerError)
+		return
+	}
+	defer stmt.Close()
+
+	// Execute the statement with values from the request
+	_, err = stmt.Exec(user.Username, user.Email, user.Password)
+	if err != nil {
+		http.Error(w, "Failed to insert user", http.StatusInternalServerError)
+		return
+	}
+
+	// Send success response
+	w.WriteHeader(http.StatusOK)
+	json.NewEncoder(w).Encode(map[string]string{"message": "User received successfully"})
+}
+
+// @Summary Get user details
+// @Description Retrieves user details from the system
+// @Tags  Users
+// @Accept  json
+// @Produce  json
+// @Success 200 {array} models.User
+// @Router /users/get [get]
+func GetUsers(w http.ResponseWriter, r *http.Request) {
+	db, err := sql.Open("sqlite3", "./test.db")
+	if err != nil {
+		http.Error(w, "Failed to connect to database", http.StatusInternalServerError)
+		return
+	}
+	defer db.Close()
+
+	rows, err := db.Query("SELECT * FROM Users")
+	if err != nil {
+		http.Error(w, "Failed to fetch users", http.StatusInternalServerError)
+		return
+	}
+	defer rows.Close()
+
+	var users []map[string]interface{}
+	cols, _ := rows.Columns()
+	for rows.Next() {
+		values := make([]interface{}, len(cols))
+		pointers := make([]interface{}, len(cols))
+		for i := range values {
+			pointers[i] = &values[i]
+		}
+
+		if err := rows.Scan(pointers...); err != nil {
+			http.Error(w, "Error scanning row", http.StatusInternalServerError)
+			return
+		}
+
+		rowMap := make(map[string]interface{})
+		for i, colName := range cols {
+			rowMap[colName] = values[i]
+		}
+		users = append(users, rowMap)
+	}
+
+	w.Header().Set("Content-Type", "application/json")
+	json.NewEncoder(w).Encode(users)
+}
+
+// @Summary Delete a User
+// @Description Deletes a User from the system by ID
+// @Tags Users
+// @Accept  json
+// @Produce  json
+// @Param id query int true "User ID"
+// @Success 200 {string} string "User deleted successfully"
+// @Router /users/delete [delete]
+func DeleteUser(w http.ResponseWriter, r *http.Request) {
+	fmt.Println("Delete function called")
+
+	db, err := sql.Open("sqlite3", "./test.db")
+	if err != nil {
+		http.Error(w, "Failed to connect to database", http.StatusInternalServerError)
+		return
+	}
+	defer db.Close()
+
+	stmt, err := db.Prepare(`
+				    DELETE FROM Users 
+    				WHERE uid = ?
+					`)
+
+	if err != nil {
+		http.Error(w, "Failed to delete user", http.StatusInternalServerError)
+		return
+	}
+
+	defer stmt.Close()
+	id := r.URL.Query().Get("id")
+	if id == "" {
+		http.Error(w, "Missing user ID", http.StatusBadRequest)
+		return
+	}
+	fmt.Println(id)
+	_, err = stmt.Exec(id)
+	if err != nil {
+		http.Error(w, "Failed to insert user", http.StatusInternalServerError)
+		return
+	}
+
+	w.WriteHeader(http.StatusOK)
+	json.NewEncoder(w).Encode(map[string]string{"message": "User received successfully"})
+
+}
